--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongoose": "^5.11.17",
+    "mongoose-paginate": "^5.0.3",
     "nodemon": "^2.0.7"
   },
   "scripts": {
