--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.17",
-    "mongoose-paginate": "^5.0.3",
+    "mongoose": "^5.11.18",
+    "mongoose-paginate": "^5.0.3"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   }
 }
